# EIE2-Lab3-FSM

./: .gitignore
task0/: main.cpp
task1/: CMakeLists.txt  lfsr.sv  lfsr_7.sv
task2/: doit.sh  f1_fsm.sv  f1_fsm_tb.cpp
task3/: clktick_tb.cpp
task4/: CMakeLists.txt  clktick.sv  doit.sh  f1_fsm.sv  f1_tb.cpp  f1_tb_novbd.cpp  lfsr_7.sv  top.sv  verify.cpp
